test/bad/bad_default_type.veld
// BAD: @default with wrong type (string default on int field)
model Config {
  retries: int @default("three")
}

